# FixrGraphIso

./: .gitignore  CMakeLists.txt  README.md
cmake/: CheckMinVersion.cmake  CreateLibtoolFile.cmake  FindFLEX.cmake  FindGLPK.cmake  FindGMP.cmake  FindGoogleProfiler.cmake  FindGtest.cmake  FindGurobi.cmake  FindTCMalloc.cmake  FindZ3.cmake
scripts/: extractSATSolverStats.sh  gatherResults.py  gatherResultsByFile.py  gen_histograms.r  groum.py  processClusters.py  processGroum.py
src/fixrgraphiso/: CMakeLists.txt  NOTES  README.md  acdfg.cpp  acdfg.h  acdfgBin.cpp  acdfgBin.cpp~  acdfgBin.h  acdfgBin.h~  collectStats.h  explicitTests.cpp  findDuplicates.cpp  findDuplicates.h  findDuplicatesMain.cpp  frequentItemSetsMain.cpp  frequentSubgraphs.cpp  frequentSubgraphs.h  frequentSubgraphsMain.cpp  ilpApproxIsomorphismEncoder.cpp  ilpApproxIsomorphismEncoder.h  iso.cpp  iso.h  isomorphismClass.cpp  isomorphismClass.h  isomorphismResults.h  itemSetDB.cpp  itemSetDB.cpp~  itemSetDB.h  main.cpp  milpProblem.cpp  milpProblem.h  proto_acdfg.pb.h  searchLattice.cpp  searchLattice.h  searchLatticeMain.cpp  serialization.cpp  serialization.h  serializationLattice.cpp  serializationLattice.h
src/fixrgraphiso/protobuf/: proto_acdfg_bin.proto  proto_search.proto  proto_unweighted_iso.proto
test/: CMakeLists.txt
test/frequentsubgraph/: CMakeLists.txt  frequentSubgraphTest.cpp  frequentSubgraphTest.h
test/iso/: CMakeLists.txt  isoTest.cpp  isoTest.h  main.cpp
test/search/: CMakeLists.txt  searchTest.cpp  searchTest.h
test/search_data/: lattice_list.txt
test/test_data/: acdfg_list.txt  methods_521.txt
test/test_data/subgraph_results/: cluster_521_info.txt
